# django-polls

./: LICENSE  pyproject.toml
django_polls.egg-info/: PKG-INFO  SOURCES.txt
